--- a/MDHS/src/client/view/ManageProductFXML.fxml
+++ b/MDHS/src/client/view/ManageProductFXML.fxml
@@ -5,25 +5,27 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ManageProductFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ManageProductFXMLController">
    <children>
-      <Label layoutX="130.0" layoutY="8.0" text="Maleny Dairy to Home System">
+      <Label layoutX="171.0" layoutY="8.0" text="Maleny Dairy to Home System">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="187.0" layoutY="43.0" text="Edit Products" underline="true">
+      <Label layoutX="219.0" layoutY="35.0" text="Edit Products" underline="true">
          <font>
-            <Font name="System Bold" size="36.0" />
+            <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <GridPane layoutX="34.0" layoutY="99.0" prefHeight="202.0" prefWidth="379.0">
+      <GridPane layoutX="79.0" layoutY="73.0" prefHeight="202.0" prefWidth="379.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="142.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="156.0" />
@@ -31,9 +33,9 @@
          </columnConstraints>
          <rowConstraints>
             <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="113.0" minHeight="10.0" prefHeight="92.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="69.0" minHeight="10.0" prefHeight="16.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="38.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="113.0" minHeight="10.0" prefHeight="108.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
             <TextField fx:id="nameTextField" editable="false" GridPane.columnIndex="1" />
@@ -47,12 +49,12 @@
             <TextField fx:id="unitTextField" editable="false" GridPane.columnIndex="2" GridPane.rowIndex="1" />
          </children>
       </GridPane>
-      <Button fx:id="dashboardButton" layoutX="24.0" layoutY="347.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="39.0" prefWidth="175.0" text="&lt;&lt; Dashboard">
+      <Button fx:id="dashboardButton" layoutX="14.0" layoutY="359.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="17.0" prefWidth="116.0" text="&lt; Dashboard">
          <font>
-            <Font size="18.0" />
+            <Font size="14.0" />
          </font>
       </Button>
-      <GridPane layoutX="278.0" layoutY="316.0" prefHeight="39.0" prefWidth="283.0">
+      <GridPane layoutX="181.0" layoutY="325.0" prefHeight="17.0" prefWidth="239.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="81.0" minWidth="10.0" prefWidth="45.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="84.0" minWidth="10.0" prefWidth="32.0" />
@@ -94,22 +96,27 @@
             </Label>
          </children>
       </GridPane>
-      <Button fx:id="addButton" layoutX="452.0" layoutY="123.0" mnemonicParsing="false" onAction="#addButtonHandler" prefHeight="27.0" prefWidth="116.0" text="Add">
+      <Button fx:id="addButton" layoutX="491.0" layoutY="223.0" mnemonicParsing="false" onAction="#addButtonHandler" prefHeight="27.0" prefWidth="77.0" style="-fx-background-color: #9fb96c;" text="Add">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="updateButton" layoutX="452.0" layoutY="173.0" mnemonicParsing="false" onAction="#updateButtonHandler" prefHeight="27.0" prefWidth="116.0" text="Update" />
-      <Button fx:id="deleteButton" layoutX="452.0" layoutY="220.0" mnemonicParsing="false" onAction="#deleteButtonHandler" prefHeight="27.0" prefWidth="116.0" text="Delete" />
-      <Button fx:id="searchButton" layoutX="314.0" layoutY="359.0" mnemonicParsing="false" onAction="#searchButtonHandler" prefHeight="30.0" prefWidth="99.0" text="Search">
+      <Button fx:id="updateButton" layoutX="491.0" layoutY="261.0" mnemonicParsing="false" onAction="#updateButtonHandler" prefHeight="27.0" prefWidth="77.0" text="Update" />
+      <Button fx:id="deleteButton" layoutX="491.0" layoutY="298.0" mnemonicParsing="false" onAction="#deleteButtonHandler" prefHeight="27.0" prefWidth="77.0" text="Delete" />
+      <Button fx:id="searchButton" layoutX="181.0" layoutY="359.0" mnemonicParsing="false" onAction="#searchButtonHandler" prefHeight="30.0" prefWidth="99.0" text="Search">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button fx:id="newButton" layoutX="431.0" layoutY="359.0" mnemonicParsing="false" onAction="#newButtonHandler" prefHeight="30.0" prefWidth="116.0" text="New">
+      <Button fx:id="newButton" layoutX="304.0" layoutY="359.0" mnemonicParsing="false" onAction="#newButtonHandler" prefHeight="30.0" prefWidth="116.0" text="New">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
+      <ImageView fitHeight="53.0" fitWidth="105.0" layoutX="7.0" layoutY="8.0">
+         <image>
+            <Image url="@../resources/mfd.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
