--- a/MDHS/src/client/view/ManageScheduleFXML.fxml
+++ b/MDHS/src/client/view/ManageScheduleFXML.fxml
@@ -5,36 +5,38 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ManageScheduleFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ManageScheduleFXMLController">
    <children>
-      <Label layoutX="130.0" layoutY="8.0" text="Maleny Dairy to Home System">
+      <Label layoutX="171.0" layoutY="8.0" text="Maleny Dairy to Home System">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="150.0" layoutY="43.0" text="Manage Schedule" underline="true">
+      <Label layoutX="195.0" layoutY="35.0" text="Manage Schedule" underline="true">
          <font>
-            <Font name="System Bold" size="36.0" />
+            <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <Button fx:id="dashboardButton" layoutX="24.0" layoutY="347.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="39.0" prefWidth="175.0" text="&lt;&lt; Dashboard">
+      <Button fx:id="dashboardButton" layoutX="14.0" layoutY="354.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="25.0" prefWidth="116.0" text="&lt; Dashboard">
          <font>
-            <Font size="18.0" />
+            <Font size="14.0" />
          </font>
       </Button>
-      <Label layoutX="78.0" layoutY="151.0" text="Postcode" />
-      <Label layoutX="80.0" layoutY="188.0" text="Day" />
-      <Label layoutX="79.0" layoutY="225.0" text="Cost ($)" />
-      <TextField fx:id="postcodeTextField" layoutX="188.0" layoutY="147.0" />
-      <TextField fx:id="costTextField" layoutX="188.0" layoutY="221.0" />
-      <ChoiceBox fx:id="deliveryDayChoiceBox" layoutX="188.0" layoutY="184.0" prefWidth="150.0" />
-      <GridPane layoutX="288.0" layoutY="326.0" prefHeight="39.0" prefWidth="283.0">
+      <Label layoutX="157.0" layoutY="151.0" text="Postcode" />
+      <Label layoutX="159.0" layoutY="188.0" text="Day" />
+      <Label layoutX="158.0" layoutY="225.0" text="Cost ($)" />
+      <TextField fx:id="postcodeTextField" layoutX="228.0" layoutY="147.0" />
+      <TextField fx:id="costTextField" layoutX="228.0" layoutY="221.0" />
+      <ChoiceBox fx:id="deliveryDayChoiceBox" layoutX="228.0" layoutY="184.0" prefWidth="150.0" />
+      <GridPane layoutX="181.0" layoutY="323.0" prefHeight="17.0" prefWidth="238.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="81.0" minWidth="10.0" prefWidth="45.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="84.0" minWidth="10.0" prefWidth="32.0" />
@@ -76,22 +78,27 @@
             </Label>
          </children>
       </GridPane>
-      <Button fx:id="addButton" layoutX="462.0" layoutY="133.0" mnemonicParsing="false" onAction="#addButtonHandler" prefHeight="27.0" prefWidth="116.0" text="Add">
+      <Button fx:id="addButton" layoutX="420.0" layoutY="146.0" mnemonicParsing="false" onAction="#addButtonHandler" prefHeight="27.0" prefWidth="76.0" style="-fx-background-color: #9fb96c;" text="Add">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="updateButton" layoutX="462.0" layoutY="183.0" mnemonicParsing="false" onAction="#updateButtonHandler" prefHeight="27.0" prefWidth="116.0" text="Update" />
-      <Button fx:id="deleteButton" layoutX="462.0" layoutY="230.0" mnemonicParsing="false" onAction="#deleteButtonHandler" prefHeight="27.0" prefWidth="116.0" text="Delete" />
-      <Button fx:id="searchButton" layoutX="324.0" layoutY="369.0" mnemonicParsing="false" onAction="#searchButtonHandler" prefHeight="30.0" prefWidth="99.0" text="Search">
+      <Button fx:id="updateButton" layoutX="420.0" layoutY="183.0" mnemonicParsing="false" onAction="#updateButtonHandler" prefHeight="27.0" prefWidth="76.0" text="Update" />
+      <Button fx:id="deleteButton" layoutX="420.0" layoutY="221.0" mnemonicParsing="false" onAction="#deleteButtonHandler" prefHeight="27.0" prefWidth="76.0" text="Delete" />
+      <Button fx:id="searchButton" layoutX="181.0" layoutY="356.0" mnemonicParsing="false" onAction="#searchButtonHandler" prefHeight="30.0" prefWidth="99.0" text="Search">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button fx:id="newButton" layoutX="441.0" layoutY="369.0" mnemonicParsing="false" onAction="#newButtonHandler" prefHeight="30.0" prefWidth="116.0" text="New">
+      <Button fx:id="newButton" layoutX="303.0" layoutY="356.0" mnemonicParsing="false" onAction="#newButtonHandler" prefHeight="30.0" prefWidth="116.0" text="New">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
+      <ImageView fitHeight="53.0" fitWidth="105.0" layoutX="6.0" layoutY="8.0">
+         <image>
+            <Image url="@../resources/mfd.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
