--- a/MDHS/src/client/view/RegisterFXML.fxml
+++ b/MDHS/src/client/view/RegisterFXML.fxml
@@ -4,37 +4,39 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.RegisterFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.RegisterFXMLController">
    <children>
-      <Label layoutX="130.0" layoutY="8.0" text="Maleny Dairy to Home System">
+      <Label layoutX="171.0" layoutY="5.0" text="Maleny Dairy to Home System">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="244.0" layoutY="43.0" text="Register" underline="true">
+      <Label layoutX="250.0" layoutY="32.0" text="Register" underline="true">
          <font>
-            <Font name="System Bold" size="36.0" />
+            <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <GridPane layoutX="37.0" layoutY="96.0" prefHeight="240.0" prefWidth="347.0">
+      <GridPane layoutX="108.0" layoutY="79.0" prefHeight="229.0" prefWidth="343.0">
          <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="155.0" minWidth="10.0" prefWidth="148.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="172.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="223.0" minWidth="10.0" prefWidth="118.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="245.0" minWidth="10.0" prefWidth="227.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="56.0" minHeight="10.0" prefHeight="56.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="55.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="56.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="59.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="61.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="48.0" minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
             <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" />
@@ -53,20 +55,25 @@
             <CheckBox fx:id="adminCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
-      <Button fx:id="registerButton" layoutX="436.0" layoutY="132.0" mnemonicParsing="false" onAction="#registerButtonHandler" prefHeight="39.0" prefWidth="153.0" text="Register">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="clearButton" layoutX="455.0" layoutY="201.0" mnemonicParsing="false" onAction="#clearButtonHandler" prefHeight="30.0" prefWidth="116.0" text="Clear">
+      <Button fx:id="registerButton" layoutX="224.0" layoutY="328.0" mnemonicParsing="false" onAction="#registerButtonHandler" prefHeight="27.0" prefWidth="105.0" style="-fx-background-color: #9fb96c;" text="Register">
          <font>
             <Font size="14.0" />
          </font>
       </Button>
-      <Button fx:id="dashboardButton" layoutX="24.0" layoutY="347.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="39.0" prefWidth="175.0" text="&lt;&lt; Dashboard">
+      <Button fx:id="clearButton" layoutX="344.0" layoutY="328.0" mnemonicParsing="false" onAction="#clearButtonHandler" prefHeight="30.0" prefWidth="105.0" text="Clear">
          <font>
-            <Font size="18.0" />
+            <Font size="14.0" />
          </font>
       </Button>
+      <Button fx:id="dashboardButton" layoutX="14.0" layoutY="354.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="30.0" prefWidth="113.0" text="&lt; Dashboard">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="53.0" fitWidth="105.0" layoutX="4.0" layoutY="5.0">
+         <image>
+            <Image url="@../resources/mfd.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
