--- a/MDHS/src/client/view/ViewScheduleFXML.fxml
+++ b/MDHS/src/client/view/ViewScheduleFXML.fxml
@@ -3,30 +3,32 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ViewScheduleFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ViewScheduleFXMLController">
    <children>
-      <Label layoutX="130.0" layoutY="8.0" text="Maleny Dairy to Home System">
+      <Label layoutX="171.0" layoutY="8.0" text="Maleny Dairy to Home System">
          <font>
-            <Font name="System Bold" size="24.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="225.0" layoutY="43.0" text="Schedule" underline="true">
+      <Label layoutX="192.0" layoutY="35.0" text="Delivery Schedule" underline="true">
          <font>
-            <Font name="System Bold" size="36.0" />
+            <Font name="System Bold" size="26.0" />
          </font>
       </Label>
-      <Button fx:id="dashboardButton" layoutX="24.0" layoutY="347.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="39.0" prefWidth="175.0" text="&lt;&lt; Dashboard">
+      <Button fx:id="dashboardButton" layoutX="14.0" layoutY="356.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="17.0" prefWidth="105.0" text="&lt; Dashboard">
          <font>
-            <Font size="18.0" />
+            <Font size="14.0" />
          </font>
       </Button>
-      <GridPane layoutX="23.0" layoutY="112.0" prefHeight="218.0" prefWidth="555.0">
+      <GridPane alignment="CENTER" layoutX="23.0" layoutY="88.0" prefHeight="242.0" prefWidth="555.0">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -35,21 +37,26 @@
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints maxHeight="68.0" minHeight="0.0" prefHeight="24.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="161.0" minHeight="0.0" prefHeight="146.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="68.0" minHeight="0.0" prefHeight="20.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="206.0" minHeight="0.0" prefHeight="198.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextArea fx:id="mondayTextArea" editable="false" prefHeight="74.0" prefWidth="139.0" GridPane.rowIndex="1" />
+            <TextArea fx:id="mondayTextArea" editable="false" prefHeight="206.0" prefWidth="136.0" GridPane.rowIndex="1" />
             <TextArea fx:id="tuesdayTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <TextArea fx:id="wednesdayTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <Label text="Monday" />
-            <Label text="Tuesday" GridPane.columnIndex="1" />
-            <Label text="Wednesday" GridPane.columnIndex="2" />
-            <Label text="Thursday" GridPane.columnIndex="3" />
-            <Label text="Friday" GridPane.columnIndex="4" />
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="55.0" prefWidth="114.0" text="Monday" />
+            <Label alignment="CENTER" prefHeight="56.0" prefWidth="112.0" text="Tuesday" GridPane.columnIndex="1" />
+            <Label alignment="CENTER" prefHeight="63.0" prefWidth="114.0" text="Wednesday" GridPane.columnIndex="2" />
+            <Label alignment="CENTER" prefHeight="60.0" prefWidth="111.0" text="Thursday" GridPane.columnIndex="3" />
+            <Label alignment="CENTER" prefHeight="53.0" prefWidth="111.0" text="Friday" GridPane.columnIndex="4" />
             <TextArea fx:id="fridayTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
             <TextArea fx:id="thursdayTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
          </children>
       </GridPane>
+      <ImageView fitHeight="53.0" fitWidth="105.0" layoutY="8.0">
+         <image>
+            <Image url="@../resources/mfd.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
