--- a/MDHS/src/client/view/ManageScheduleFXML.fxml
+++ b/MDHS/src/client/view/ManageScheduleFXML.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ManageScheduleFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ManageScheduleFXMLController">
    <children>
       <Label layoutX="171.0" layoutY="8.0" text="Maleny Dairy to Home System">
          <font>
@@ -33,7 +33,7 @@
       <Label layoutX="157.0" layoutY="151.0" text="Postcode" />
       <Label layoutX="159.0" layoutY="188.0" text="Day" />
       <Label layoutX="158.0" layoutY="225.0" text="Cost ($)" />
-      <TextField fx:id="postcodeTextField" editable="false" layoutX="228.0" layoutY="147.0" />
+      <TextField fx:id="postcodeTextField" layoutX="228.0" layoutY="147.0" />
       <TextField fx:id="costTextField" layoutX="228.0" layoutY="221.0" />
       <ChoiceBox fx:id="deliveryDayChoiceBox" layoutX="228.0" layoutY="184.0" prefWidth="150.0" />
       <GridPane layoutX="181.0" layoutY="323.0" prefHeight="17.0" prefWidth="238.0">
