--- a/MDHS/src/client/view/LoginFXML.fxml
+++ b/MDHS/src/client/view/LoginFXML.fxml
@@ -8,14 +8,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.LoginFXMLController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.LoginFXMLController">
    <children>
       <Button fx:id="backButton" layoutX="17.0" layoutY="359.0" mnemonicParsing="false" onAction="#backButtonHandler" text="&lt; Back">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <TextField fx:id="emailTextField" layoutX="238.0" layoutY="188.0" />
-      <TextField fx:id="passwordTextField" layoutX="238.0" layoutY="218.0" />
+      <TextField fx:id="emailTextField" layoutX="238.0" layoutY="188.0" promptText="Please Input Email Address" />
+      <TextField fx:id="passwordTextField" layoutX="238.0" layoutY="218.0" promptText="Please Input Password" />
       <Label layoutX="199.0" layoutY="192.0" text="Email" />
       <Label layoutX="179.0" layoutY="222.0" text="Password" />
       <Button fx:id="loginButton" layoutX="290.0" layoutY="259.0" mnemonicParsing="false" onAction="#loginButtonHandler" style="-fx-background-color: #9fb96c;" text="Login" />
