--- a/MDHS/src/client/view/RegisterFXML.fxml
+++ b/MDHS/src/client/view/RegisterFXML.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.RegisterFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.RegisterFXMLController">
    <children>
       <Label layoutX="171.0" layoutY="5.0" text="Maleny Dairy to Home System">
          <font>
@@ -40,22 +40,22 @@
             <RowConstraints maxHeight="48.0" minHeight="10.0" prefHeight="48.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField fx:id="firstNameTextField" GridPane.columnIndex="1" />
-            <TextField fx:id="lastNameTextField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="emailTextField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="firstNameTextField" promptText="Input First Name" GridPane.columnIndex="1" />
+            <TextField fx:id="lastNameTextField" promptText="Input Last Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="emailTextField" promptText="Input Email Address" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="First Name" />
             <Label text="Last Name" GridPane.rowIndex="1" />
             <Label text="Email" GridPane.rowIndex="2" />
             <Label text="Password" GridPane.rowIndex="3" />
-            <TextField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="passwordTextField" promptText="Input Password" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <Label text="Delivery Address" GridPane.rowIndex="5" />
             <Label text="Phone Number" GridPane.rowIndex="4" />
-            <TextField fx:id="phonenumberTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="addressTextField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="phonenumberTextField" promptText="Input Phone Numb. (10 digits, no spaces)" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="addressTextField" promptText="Input Address for Delivery" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <Label text="Staff Member" GridPane.rowIndex="7" />
             <CheckBox fx:id="adminCheckbox" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.rowIndex="7" />
             <Label text="Postcode" GridPane.rowIndex="6" />
-            <TextField fx:id="postcodeTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="postcodeTextField" promptText="Input Postcode" GridPane.columnIndex="1" GridPane.rowIndex="6" />
          </children>
       </GridPane>
       <Button fx:id="registerButton" layoutX="224.0" layoutY="328.0" mnemonicParsing="false" onAction="#registerButtonHandler" prefHeight="27.0" prefWidth="105.0" style="-fx-background-color: #9fb96c;" text="Register">
