--- a/MDHS/src/client/view/ViewOrderFXML.fxml
+++ b/MDHS/src/client/view/ViewOrderFXML.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ViewOrderFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ViewOrderFXMLController">
    <children>
       <Label layoutX="130.0" layoutY="8.0" text="Maleny Dairy to Home System">
          <font>
@@ -41,11 +41,11 @@
             <Label text="Subtotal" GridPane.rowIndex="2" />
             <Label text="Tax" GridPane.rowIndex="3" />
             <Label text="Total Cost" GridPane.rowIndex="4" />
-            <TextField fx:id="totalCostTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="taxTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="subtotalTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <TextField fx:id="deliveryCostTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextArea fx:id="orderItemsTextArea" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+            <TextField fx:id="totalCostTextField" editable="false" promptText="Total Cost ($)" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="taxTextField" editable="false" promptText="Tax ($)" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="subtotalTextField" editable="false" promptText="Subtotal ($)" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="deliveryCostTextField" editable="false" promptText="Cost of Delivery ($)" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextArea fx:id="orderItemsTextArea" prefHeight="200.0" prefWidth="200.0" promptText="Order Contents" GridPane.columnIndex="1" />
          </children>
       </GridPane>
       <Button fx:id="dashboardButton" layoutX="24.0" layoutY="347.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="39.0" prefWidth="175.0" text="&lt;&lt; Dashboard">
@@ -78,12 +78,12 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <TextField fx:id="currentIndexTextField" editable="false" prefHeight="25.0" prefWidth="34.0" GridPane.columnIndex="1">
+            <TextField fx:id="currentIndexTextField" editable="false" prefHeight="25.0" prefWidth="34.0" promptText="Current" GridPane.columnIndex="1">
                <font>
                   <Font size="14.0" />
                </font>
             </TextField>
-            <TextField fx:id="totalIndexTextField" editable="false" prefHeight="27.0" prefWidth="54.0" GridPane.columnIndex="3">
+            <TextField fx:id="totalIndexTextField" editable="false" prefHeight="27.0" prefWidth="54.0" promptText="Max" GridPane.columnIndex="3">
                <font>
                   <Font size="14.0" />
                </font>
@@ -110,20 +110,20 @@
             <RowConstraints maxHeight="38.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField fx:id="firstNameTextField" editable="false" GridPane.columnIndex="1" />
-            <TextField fx:id="lastNameTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="emailTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="firstNameTextField" editable="false" promptText="First Name" GridPane.columnIndex="1" />
+            <TextField fx:id="lastNameTextField" editable="false" promptText="Last Name" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="emailTextField" editable="false" promptText="Email Address" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="First Name" />
             <Label text="Last Name" GridPane.rowIndex="1" />
             <Label text="Email" GridPane.rowIndex="2" />
             <Label text="Delivery Address" GridPane.rowIndex="4" />
             <Label text="Phone Number" GridPane.rowIndex="3" />
-            <TextField fx:id="phonenumberTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="addressTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <TextField fx:id="phonenumberTextField" editable="false" promptText="Phone Number" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="addressTextField" editable="false" promptText="Delivery Address" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <Label text="Delivery Time" GridPane.rowIndex="6" />
-            <TextField fx:id="deliveryTimeTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <TextField fx:id="deliveryTimeTextField" editable="false" promptText="Delivery Time" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <Label text="Delivery Day" GridPane.rowIndex="5" />
-            <TextField fx:id="deliveryDayTextField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="deliveryDayTextField" editable="false" promptText="Delivery Day" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
    </children>
