--- a/MDHS/src/client/view/ViewProductFXML.fxml
+++ b/MDHS/src/client/view/ViewProductFXML.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ViewProductFXMLController">
+<AnchorPane fx:id="contentAnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.controller.ViewProductFXMLController">
    <children>
       <Label layoutX="169.0" layoutY="9.0" text="Maleny Dairy to Home System">
          <font>
@@ -38,15 +38,15 @@
             <RowConstraints maxHeight="113.0" minHeight="10.0" prefHeight="85.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <TextField fx:id="nameTextField" editable="false" prefHeight="34.0" prefWidth="248.0" GridPane.columnIndex="1" />
-            <TextField fx:id="quantityTextField" editable="false" prefHeight="34.0" prefWidth="248.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="priceTextField" editable="false" prefHeight="34.0" prefWidth="259.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="nameTextField" editable="false" prefHeight="34.0" prefWidth="248.0" promptText="Product Name" GridPane.columnIndex="1" />
+            <TextField fx:id="quantityTextField" editable="false" prefHeight="34.0" prefWidth="248.0" promptText="Max Quantity Available" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="priceTextField" editable="false" prefHeight="34.0" prefWidth="259.0" promptText="Unit Price" GridPane.columnIndex="1" GridPane.rowIndex="2" />
             <Label text="Product Name" />
             <Label text="Details" GridPane.rowIndex="1" />
             <Label text="Price" GridPane.rowIndex="2" />
             <Label text="Ingredients" GridPane.rowIndex="3" />
-            <TextArea fx:id="ingredientsTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <TextField fx:id="unitTextField" editable="false" prefHeight="32.0" prefWidth="116.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <TextArea fx:id="ingredientsTextArea" editable="false" prefHeight="200.0" prefWidth="200.0" promptText="List of Ingredients" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="unitTextField" editable="false" prefHeight="32.0" prefWidth="116.0" promptText="Units" GridPane.columnIndex="2" GridPane.rowIndex="1" />
          </children>
       </GridPane>
       <Button fx:id="dashboardButton" layoutX="14.0" layoutY="356.0" mnemonicParsing="false" onAction="#dashboardButtonHandler" prefHeight="27.0" prefWidth="105.0" text="&lt; Dashboard">
@@ -79,12 +79,12 @@
                   <Font size="18.0" />
                </font>
             </Button>
-            <TextField fx:id="currentIndexTextField" editable="false" prefHeight="25.0" prefWidth="34.0" GridPane.columnIndex="1">
+            <TextField fx:id="currentIndexTextField" editable="false" prefHeight="25.0" prefWidth="34.0" promptText="Current" GridPane.columnIndex="1">
                <font>
                   <Font size="14.0" />
                </font>
             </TextField>
-            <TextField fx:id="totalIndexTextField" editable="false" prefHeight="27.0" prefWidth="54.0" GridPane.columnIndex="3">
+            <TextField fx:id="totalIndexTextField" editable="false" prefHeight="27.0" prefWidth="54.0" promptText="Max" GridPane.columnIndex="3">
                <font>
                   <Font size="14.0" />
                </font>
